@@ -1,0 +1,49 @@
+<?php
+
+// Always UTF-8
+// Always uppercase the first word
+
+$gtext['actions'] = 'Azioni'; # Check
+$gtext['admin'] = 'Amministrazione dei Feed';
+$gtext['alert_delete'] = 'Sicuri di voler eliminare i Feed? Anche i relativi Item verranno cancellati.';
+$gtext['alert_purge'] = 'Sicuri di voler svuotare i Feed?';
+$gtext['approve_2'] = 'Approva';
+$gtext['approve'] = 'Approva Feed';
+$gtext['back_2'] = 'Torna ai Feed';
+$gtext['back'] = 'Indietro';
+$gtext['body'] = 'Contenuto';
+$gtext['cancel'] = 'Annulla';
+$gtext['date'] = 'Data';
+$gtext['delete'] = 'Elimina';
+$gtext['draft'] = 'Bozza';
+$gtext['edit_2'] = 'Modifica Feed';
+$gtext['edit'] = 'Modifica';
+$gtext['error_5'] = 'Data non valida';
+$gtext['feed'] = 'Feed';
+$gtext['feeds'] = 'RSS Feeds';
+$gtext['form_error_1'] = 'L\'URL non può essere vuoto';
+$gtext['form_error_2'] = 'URL non valido';
+$gtext['form_error_3'] = 'RSS Feed duplicato ';
+$gtext['form_error_4'] = 'Sembra che il Feed RSS non sia valido';
+$gtext['form_error'] = 'Non è stato possibile inviare il form, controllare gli errori';
+$gtext['form_problem'] = 'Non è stato possibile inviare il form, riprovare per favore';
+$gtext['header'] = 'Scopri tutte le notizie'; # Check
+$gtext['items'] = 'Item';
+$gtext['manage'] = 'Gestisci i Feed'; # Check
+$gtext['new'] = 'Nuovo Feed';
+$gtext['not_found'] = 'Non trovato';
+$gtext['nothing'] = 'Nulla da approvare';
+$gtext['published_on'] = 'Pubblicato su'; # Check
+$gtext['purge'] = 'Svuota i Feed';
+$gtext['read_more'] = 'Leggi tutto';
+$gtext['save_draft'] = 'Salva come Bozza';
+$gtext['submit'] = 'Invia';
+$gtext['success2'] = 'Un amministratore esaminerà la tua proposta nei prossimi giorni.';
+$gtext['success3'] = 'Sembra che sia tutto a posto.';
+$gtext['success'] = 'Successo!';
+$gtext['suggested'] = 'Suggerito da';
+$gtext['suggest'] = 'Suggerisci un Feed';
+$gtext['title'] = 'Titolo';
+$gtext['url'] = 'URL';
+
+?>
