@@ -1,0 +1,26 @@
+<?php
+
+// Always UTF-8
+// Always uppercase the first word
+
+$gtext['accept_mode'] = 'Il sito a cui state cercando di connettervi ha richiesto la vostra fiducia nel seguente URL';
+$gtext['always'] = 'Sempre';
+$gtext['cancelled'] = 'Richiesta annullata';
+$gtext['continue'] = 'Volete continuare?';
+$gtext['error_directly']  = 'Non potete accedere direttamente in questa modalità.';
+$gtext['error_failed'] = 'Verifica dell\'OpenID fallita';
+$gtext['error_id_conflict'] = 'Questo OpenID appartiene già ad un altro utente.';
+$gtext['error_pw_fail'] = 'Troppi errori cercando di inserire la password, dovete chiudere e riaprire il browser per riprovare.';
+$gtext['homepage'] = 'Homepage';
+$gtext['logged_in'] = 'Siete collegati come';
+$gtext['login'] = 'Login';
+$gtext['no_mode'] = 'Questo è un OpenID server endpoint. Per maggiori informazioni si veda <a href="http://openid.net">http://openid.net</a>';
+$gtext['no'] = 'No';
+$gtext['not_logged_in'] = 'Non avete effettuato l\'accesso';
+$gtext['realm'] = 'Reame'; # Check
+$gtext['redirect'] = 'Redirezione verso';
+$gtext['server'] = 'Server';
+$gtext['test'] = 'Test';
+$gtext['yes'] = 'Yes';
+
+?>
