@@ -1,0 +1,56 @@
+<?php
+
+// Always UTF-8
+// Always uppercase the first word
+
+$gtext['admin'] = 'Amministrazione Immagini';
+$gtext['album'] = 'Album';
+$gtext['alert_delete'] = 'Sicuri di voler cancellare questi album? Verranno cancellate tutte le immagini in essi contenute.';
+$gtext['annotate_2'] = 'Annota Immagini';
+$gtext['annotate_tip'] = 'Cliccate sull\'immagine per ritagliarla, sul testo per modificarlo.';
+$gtext['annotate'] = 'Annota';
+$gtext['back_2'] = 'Torna alle Immagini';
+$gtext['back'] = 'Indietro';
+$gtext['body'] = 'Contenuto';
+$gtext['cancel'] = 'Annulla';
+$gtext['clickme'] = 'Click qui per modificare il testo';
+$gtext['cover'] = 'Copertina dell\'Album';
+$gtext['created_album'] = 'Album creato';
+$gtext['date'] = 'Data';
+$gtext['delete'] = 'Elimina';
+$gtext['draft'] = 'Bozza';
+$gtext['edit_2'] = 'Modifica Album';
+$gtext['edit'] = 'Modifica';
+$gtext['extensions'] = 'Estensioni supportate';
+$gtext['form_error_1'] = 'Tipo di file non valido';
+$gtext['form_error_2'] = 'File troppo grande';
+$gtext['form_error_3'] = 'Album non valido';
+$gtext['form_error_4'] = 'Il titolo non può essere vuoto';
+$gtext['form_error_5'] = 'Il contenuto non può essere vuoto';
+$gtext['form_error_6'] = 'Data non valida';
+$gtext['form_error_7'] = 'Ora non valida';
+$gtext['form_error'] = 'Non è stato possibile inviare il form, verificare gli errori';
+$gtext['form_problem'] = 'Non è stato possibile inviare il form, per favore riprovare';
+$gtext['header'] = 'Un\'Immagine vale mille Blog';
+$gtext['max_filesize'] = 'Dimensioni massime del file';
+$gtext['more'] = 'Mostra altre Immagini';
+$gtext['new'] = 'Nuovo Album';
+$gtext['next'] = 'Successivo';
+$gtext['no_photos'] = 'Nessuna immagine';
+$gtext['ok'] = 'Ok';
+$gtext['photos'] = 'Immagini';
+$gtext['prev'] = 'Precedente';
+$gtext['published'] = 'Pubblicato';
+$gtext['publisher'] = 'Autore';
+$gtext['save_draft'] = 'Salva come Bozza';
+$gtext['saving'] = 'Salvataggio in corso';
+$gtext['submit'] = 'Invia';
+$gtext['success2'] = 'Verrete rediretti in 5 secondi.';
+$gtext['success'] = 'Successo!';
+$gtext['time'] = 'Ora'; # Check
+$gtext['title'] = 'Titolo';
+$gtext['upload_2'] = 'Carica';
+$gtext['upload'] = 'Carica Immagine/i';
+$gtext['uploaded_images'] = 'Carica Immagine/i nell\'album ';
+
+?>
