@@ -1,0 +1,41 @@
+<?php
+
+// Always UTF-8
+// Always uppercase the first word
+
+$gtext['acquaintance'] = 'Conoscente';
+$gtext['cancel'] = 'Annulla';
+$gtext['change_relation'] = 'Ha modificato il Legame con';
+$gtext['child'] = 'Figlio'; # Check - bambino?
+$gtext['colleague'] = 'Collega';
+$gtext['contact'] = 'Contatto';
+$gtext['co_resident'] = 'Co-inquilino/a';
+$gtext['co_worker'] = 'Collaboratore/trice';
+$gtext['crush'] = 'Crush'; # Check
+$gtext['date'] = 'Data';
+$gtext['edit_relationship'] = 'Modifica Legame';
+$gtext['end_relation'] = 'ha chiuso il suo Legame con';
+$gtext['family'] = 'Famiglia';
+$gtext['form_error'] = 'Non è stato possibile inviare la form, verificare gli errori';
+$gtext['form_problem'] = 'Non è stato possibile inviare la form, per favore riprovare';
+$gtext['friend'] = 'Amico/a';
+$gtext['friendship'] = 'Amicizia';
+$gtext['geographical'] = 'Geografica';
+$gtext['kin'] = 'Parente';
+$gtext['me'] = 'Me stesso/a';
+$gtext['met'] = 'Incontrato dal vivo'; # Check
+$gtext['muse'] = 'Musa';
+$gtext['myself'] = 'Me stesso/a';
+$gtext['neighbor'] = 'Vicino';
+$gtext['none'] = 'None';
+$gtext['parent'] = 'Genitore';
+$gtext['physical'] = 'Fisico'; # Check
+$gtext['professional'] = 'Professionale';
+$gtext['relationship'] = 'Legame con';
+$gtext['romantic'] = 'Romantico';
+$gtext['sibling'] = 'Fratello/Sorella';
+$gtext['spouse'] = 'Consorte';
+$gtext['submit'] = 'Invia';
+$gtext['sweetheart'] = 'Ragazzo/Ragazza';
+
+?>
